Programming languages and paradigms/Interpreter/examples/bad/main_undeclared.ho
// error: function main is undeclared
func f() {
    
}